# footcrawl

./: .env.example  .gitignore  Dockerfile  README.md  constraints.txt  justfile  pyproject.toml
.github/workflows/: publish.yml
confs/: clubs.yaml  competitions.yaml  fixtures.yaml  match_actions.yaml  match_lineups.yaml  match_stats.yaml  squads.yaml  transfermarkt.yml
src/footcrawl/: __init__.py  __main__.py  cli.py  client.py  constants.py  crawlers.py  engine.py  io.py  metrics.py  parsers.py  schemas.py  services.py  settings.py  sources.py  tasks.py
src/footcrawl/crawlers/: __init__.py  base.py  clubs.py  competitions.py  fixtures.py  match_actions.py  match_lineups.py  match_stats.py  squads.py
src/footcrawl/io/: configs.py  datasets.py  files.py  services.py
src/footcrawl/parsers/: __init__.py  base.py  clubs.py  competitions.py  fixtures.py  match_actions.py  match_lineups.py  match_stats.py  squads.py  utils.py
tasks/: check.just  clean.just  crawler.just  docker.just
tests/: conftest.py  test_cli.py  test_client.py  test_metrics.py  test_parsers.py
tests/confs/invalid/: 1. invalid.yaml
tests/confs/valid/: 1. clubs.yaml  2. squads.yaml  3. fixtures.yaml  4. match_lineups.yaml  5. match_stats.yaml  6. match_actions.yaml  7. competitions.yaml
tests/crawlers/: test_base.py  test_base_crawler.py  test_clubs.py  test_clubs_crawler.py  test_competitions_crawler.py  test_fixtures_crawler.py  test_match_actions_crawler.py  test_match_lineups_crawler.py  test_match_stats_crawler.py  test_squads_crawler.py
tests/data/transfermarkt/2024/: clubs_sample.json  fixtures_sample.json
tests/io/: test_configs.py  test_datasets.py  test_services.py
tests/parsers/: conftest.py  test_clubs_parser.py  test_competitions_parser.py  test_fixtures_parser.py  test_match_actions_parser.py  test_match_lineups_parser.py  test_match_stats_parser.py  test_squads_parser.py
