[project]
name = "footcrawl"
version = "0.1.0"
description = "A web crawler for football data."
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.12.0"
dependencies = [
    "aiohttp>=3.11.13",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.3",
    "hatchling>=1.27.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "polars>=1.24.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "setuptools>=78.0.2",
    "tenacity>=9.0.0",
]

[project.scripts]
footcrawl = "footcrawl.cli:execute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
checks = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.10",
]
commit = [
    "commitizen>=4.4.1",
    "pre-commit>=4.1.0",
]
dev = [
    "rust-just>=1.39.0",
]
doc = [
    "pdoc>=15.0.1",
]
notebooks = [
    "ipykernel>=6.29.5",
]

# TOOLS

[tool.uv]
default-groups = ["checks", "commit", "dev", "doc", "notebooks"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_schema = "pep440"
version_provider = "pep621"
changelog_start_rev = "v0.1.0"
update_changelog_on_bump = true

[tool.mypy]
pretty = true
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
fix = true
indent-width = 4
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"



